# Posenet-Pytorch-Visual-Localization

./: README.md  webm_to_gif.txt
Final_report/GT_1st_trial/v_1_odom/: package.xml
Final_report/GT_1st_trial/v_2_imu_odom/src/: synchronizer.py
Final_report/GT_1st_trial/ver_roslaunch/: CMakeLists.txt  synchronizer.py
Final_report/GroundTruth/v_1_odom/: CMakeLists.txt  instructions.txt
Final_report/GroundTruth/v_1_odom/src/: synchronizer.py
Final_report/GroundTruth/v_2_imu_odom/: instructions.txt
Final_report/GroundTruth/ver_roslaunch/: package.xml
Final_report/RunThePackage/: instructions.txt
Final_report/TroubleShooting/: setting_instructions.txt
Final_report/lastSubGoal_1st_trail/: CMakeLists.txt
Final_report/posenet-pytorch/: instructions.txt
GT/GT_1st_trial/text_file/integrated/: dataset_test.txt
GT/GT_1st_trial/v3_aft/: CMakeLists.txt  instructions.txt
GT/GT_2nd_trial/: instructions.txt
GT/GT_2nd_trial/text_file/: dataset_test.txt
GT/GT_3rd_trial/: insturction.txt
GT/text_file/: dataset_train.txt
GT_1st_trial/text_file/aft/: dataset_train.txt
GT_1st_trial/text_file/laser/: dataset_train.txt
GT_1st_trial/v1_laser/: instructions.txt
GT_1st_trial/v2_integrated/: instructions.txt
GT_1st_trial/v3_aft/: package.xml
GT_1st_trial/v3_aft/src/: synchronizer.py
GT_2nd_trial/src/: synchronizer.py
GT_3rd_trial/: insturction.txt
GT_for_custom_bag/text_file/aft/: dataset_test.txt
GT_for_custom_bag/text_file/integrated/: dataset_train.txt
GT_for_custom_bag/text_file/laser/: dataset_test.txt
GT_for_custom_bag/v1_laser/: instructions.txt
GT_for_custom_bag/v2_integrated/src/: synchronizer.py
Interim_report/: instructions.txt
LeGO-LOAM/: fix_src.txt
LeGO-LOAM/build_setting/: CMakeLists.txt  build_settings.txt
PoseNet/PoseNet_1st_trial/: instructions.txt
PoseNet/PoseNet_2nd_trial/: instructions.txt
PoseNet/PoseNet_6th_trial/: instructions.txt
PoseNet/v2_integrated_to_init/: instructions.txt
PoseNet_1st_trial/v3_aft_mapped_to_init/: instructions.txt
PoseNet_2nd_trial/: instructions.txt
PoseNet_3rd_trial/: instructions.txt
PoseNet_4th_trial/: instructions.txt
PoseNet_5th_trial/: instructions.txt
Report_1/: TODO.txt  solver.py
Report_2/GT_1st_trial/ver_roslaunch/: run.launch
Report_2/TODO/: todo.txt
Report_2/TroubleShooting/: setting_instructions.txt
Report_2/lastSubGoal_1st_trail/: fail_rviz_node.webm  lastGoal.txt  solver.py
Report_2/posenet-pytorch_1st_trial/: instructions.txt
Visualization/Visualization_1/: instructions.txt  memo.txt
Visualization/Visualization_1/visualizer/: CMakeLists.txt
Visualization/Visualization_1/visualizer/src/: rviz_node.py
Visualization/Visualization_2/: error_posenet_node.webm
Visualization/Visualization_2/results/: instructions.txt
Visualization/Visualization_2/visualizer/: CMakeLists.txt  package.xml
Visualization/Visualization_2/visualizer/launch/: run_rviz.launch  rviz_config.rviz
Visualization/Visualization_2/visualizer/src/: data_publish_node.py  image_node.py  rviz_node.py
Visualization/Visualization_2/visualizer/src/posenet_pytorch/: solver.py  test.py
Visulization/: instructions.txt
Visulization_1st_trial/: instructions.txt
Visulization_1st_trial/visualizer/: package.xml
Visulization_1st_trial/visualizer/launch/: run_rviz.launch
